2006-10-10  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5a5 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.5a5 release.

	* generic/tclNamespace.c (TclTeardownNamespace):  After the
	commandPathSourceList of a namespace is cleared, set the
	commandPathSourceList to NULL so we don't try to walk the list
	a second time, possibly after it is freed.  [Bug 1566526]
	* tests/namespace.test (namespace-51.16):	Added test.

2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* doc/UpVar.3: brough the docs in accordance to the code. Ever
	since 8.0, Tcl_UpVar(2)? accepts TCL_NAMESPACE_ONLY as a flag
	value, and var-3.4 tests for proper behaviour. The docs only
	allowed 0 and TCL_GLOBAL_ONLY. [Bug 1574099]
	
2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* tests/*.test: updated all tests to refer explicitly to the
	global variables ::errorInfo, ::errorCode, ::env and
	::tcl_platform: many were relying on the alternative lookup in the
	global namespace, that feature is tested specifically in namespace
	and variable tests.
	The modified testfiles are: apply.test, basic.test, case.test,
	cmdIL.test, cmdMZ.test, compExpr-old.test, error.test, eval.test,
	event.test, expr.test, fileSystem.test, for.test, http.test,
	if.test, incr-old.test, incr.test, interp.test, io.test,
	ioCmd.test, load.test, misc.test, namespace.test, parse.test,
	parseOld.test, pkg.test, proc-old.test, set.test, switch.test,
	tcltest.test, thread.test, var.test, while-old.test, while.test.

2006-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: bug #1571954: avoid /RTCc flag with MSVC8

2006-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/binary.n:        TIP #275: Support unsigned values in
	* generic/tclBinary.c: binary command. Tests and documentation
	* tests/binary.test:   updated.

2006-10-05  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl: Fixed bug in TIP #189 implementation, now
	  allowing '_' in module names.
