@@ -1,3 +1,8 @@
+2006-10-11  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclPkg.c (Tcl_PackageRequireEx):	Corrected crash
+	when argument version=NULL passed in.
+
 2006-10-10  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5a5 TAGGED FOR RELEASE ***
